(10)fix upload images

--- a/app/views/admin/product_images/index.html.erb
+++ b/app/views/admin/product_images/index.html.erb
@@ -7,7 +7,7 @@
   </div>
 
   <h1>
-    商品 #<%= @product.id %> <%= @product.title %> 
+    商品 #<%= @product.id %> <%= @product.title %>
   </h1>
 </div>
 
@@ -23,7 +23,7 @@
     <% @product_images.each do |product_image| %>
       <tr>
         <td><%= product_image.id %></td>
-        <td><%= image_tag product_image.image.url(:middle) %></td>
+        <td><%= image_tag product_image.image.variant(resize_to_limit: [300, 300]) %></td>
         <td>
           <%= form_tag admin_product_product_image_path(@product, product_image), method: :put do %>
             <input type="text" value="<%= product_image.weight %>" name="weight" />
