--- a/app/views/dashboard/orders/index.html.erb
+++ b/app/views/dashboard/orders/index.html.erb
@@ -4,7 +4,7 @@
     <% @orders.each do |order| %>
       <div class="media shopping-cart-row">
         <div class="media-left">
-          <%= image_tag order.product.main_product_image.image.url(:small), class: 'media-object', alt: order.product.title %>
+        <%= image_tag order.product.main_product_image.image.variant(resize_to_limit: [100, 100]), class: 'media-object', alt: order.product.title %>
         </div>
         <div class="media-body">
           <h4 class="media-heading">订单号: <%= order.order_no %></h4>
