--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,15 +1,15 @@
-<h1>确认订单</h1>
+<h1>Confirm Order</h1>
 <div class="row">
   <div class="container">
     <div class="page-header">
-      <h4><i class="fa fa-map-marker"></i> 收货地址</h4>
+      <h4><i class="fa fa-map-marker"></i> Shipping Address</h4>
     </div>
     <div id="address_list">
 
     </div>
 
     <div class="page-header">
-      <h4><i class="fa fa-credit-card"></i> 支付方式</h4>
+      <h4><i class="fa fa-credit-card"></i> Payment Method</h4>
     </div>
     <ul class="list-group">
       <li class="list-group-item">
@@ -19,7 +19,7 @@
     </ul>
 
     <div class="page-header">
-      <h4><i class="fa fa-list-alt"></i> 商品列表</h4>
+      <h4><i class="fa fa-list-alt"></i> Product List</h4>
     </div>
     <% @shopping_carts.each do |shopping_cart| %>
       <div class="media shopping-cart-row">
@@ -28,7 +28,7 @@
         </div>
         <div class="media-body">
           <h4 class="media-heading"><%= shopping_cart.product.title %></h4>
-          数量: <%= shopping_cart.amount %> 价格: ¥<%= shopping_cart.amount * shopping_cart.product.price %>
+          Quantity: <%= shopping_cart.amount %> Price: ¥<%= shopping_cart.amount * shopping_cart.product.price %>
         </div>
       </div>
     <% end -%>
@@ -37,8 +37,8 @@
     <div class="pull-right">
       <%= form_tag orders_path, method: :post, class: "create-order-form" do %>
         <input type="hidden" name="address_id" />
-        <strong>总价: ¥<%= @shopping_carts.sum { |cart| cart.amount * cart.product.price } %></strong>
-        <input type="submit" value="确认订单" class="btn btn-danger btn-lg" />
+        <strong>Total Price: ¥<%= @shopping_carts.sum { |cart| cart.amount * cart.product.price } %></strong>
+        <input type="submit" value="Confirm Order" class="btn btn-danger btn-lg" />
       <% end %>
     </div>
 
