--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -1,10 +1,10 @@
 <div>
   <div class="pull-right">
-    <%= link_to "新建商品", new_admin_product_path, class: "btn btn-primary" %>
+    <%= link_to "Create Prodcut", new_admin_product_path, class: "btn btn-primary" %>
   </div>
 
   <h1>
-    商品(<%= @products.total_entries %>)
+    Product(<%= @products.total_entries %>)
   </h1>
 </div>
 
@@ -12,12 +12,12 @@
   <table class="table table-striped">
     <tr>
       <th>ID</th>
-      <th>名称</th>
+      <th>Product Name</th>
       <th>UUID/SKU</th>
       <th>MSRP</th>
       <th>Price</th>
-      <th>库存</th>
-      <th>状态</th>
+      <th>Stock</th>
+      <th>Status</th>
       <th></th>
     </tr>
 
@@ -31,9 +31,9 @@
         <td><%= product.amount %></td>
         <td><%= product.status %></td>
         <td align="right">
-          <%= link_to "编辑", edit_admin_product_path(product) %> 
-          <%= link_to "删除", admin_product_path(product), method: :delete, 'data-confirm': "确认删除吗?" %>
-          <%= link_to "图片管理", admin_product_product_images_path(product_id: product) %>
+          <%= link_to "Edit", edit_admin_product_path(product) %>
+          <%= link_to "Delete", admin_product_path(product), method: :delete, 'data-confirm': "Are you sure you want to delete?" %>
+          <%= link_to "Image Management", admin_product_product_images_path(product_id: product) %>
         </td>
       </tr>
     <% end -%>
