--- a/app/views/dashboard/orders/index.html.erb
+++ b/app/views/dashboard/orders/index.html.erb
@@ -1,4 +1,4 @@
-<h1>我的订单</h1>
+<h1>My Order</h1>
 <div class="row">
   <div class="container">
     <% if @orders.present? %>
@@ -8,25 +8,25 @@
             <% if order.product.present? && order.product.main_product_image.present? %>
               <%= image_tag order.product.main_product_image.image.variant(resize_to_limit: [100, 100]), class: 'media-object', alt: order.product.title %>
             <% else %>
-              <%= image_tag 'default_image.jpg', class: 'media-object', alt: '默认图片' %>
+              <%= image_tag 'default_image.jpg', class: 'media-object', alt: 'Default Image' %>
             <% end %>
           </div>
           <div class="media-body">
-            <h4 class="media-heading">订单号: <%= order.order_no %></h4>
+            <h4 class="media-heading">Order Number: <%= order.order_no %></h4>
             <% if order.product.present? %>
               <p><%= order.product.title %></p>
             <% else %>
-              <p>产品信息不可用</p>
+              <p>Product information is unavailable</p>
             <% end %>
-            <p>数量: <%= order.amount %> 价格: ¥<%= order.total_money %></p>
-            <p><span class="label <%= order.is_paid? ? 'label-success' : 'label-warning' %>"><%= order.is_paid? ? '已付款' : '未付款' %></span> <%= order.address.contact_name %> <%= order.address.cellphone %> <%= order.address.address %></p>
+            <p>Quantity: <%= order.amount %> Price: ¥<%= order.total_money %></p>
+            <p><span class="label <%= order.is_paid? ? 'label-success' : 'label-warning' %>"><%= order.is_paid? ? 'Paid' : 'Unpaid' %></span> <%= order.address.contact_name %> <%= order.address.cellphone %> <%= order.address.address %></p>
           </div>
         </div>
       <% end -%>
 
       <%= will_paginate @orders %>
     <% else %>
-      <p>无历史订单</p>
+      <p>No order history</p>
     <% end %>
   </div>
 </div>
