--- a/app/views/dashboard/profile/password.html.erb
+++ b/app/views/dashboard/profile/password.html.erb
@@ -1,4 +1,4 @@
-<h1>修改密码</h1>
+<h1>Change Password</h1>
 <div class="row">
   <div class="container">
     <%= form_tag dashboard_update_password_path, method: :put, class: 'form-horizontal', id: "user_form" do %>
@@ -13,26 +13,26 @@
       <% end %>
 
       <div class="form-group">
-        <div class="col-lg-12">旧密码 *</div>
+        <div class="col-lg-12">Old Password *</div>
         <div class="col-lg-12">
           <%= password_field_tag :old_password, '', class: "form-control" %>
         </div>
       </div>
       <div class="form-group">
-        <div class="col-lg-12">密码 *</div>
+        <div class="col-lg-12">Password *</div>
         <div class="col-lg-12">
           <%= password_field_tag :password, '', class: "form-control" %>
         </div>
       </div>
       <div class="form-group">
-        <div class="col-lg-12">密码确认 *</div>
+        <div class="col-lg-12">Confirm Password *</div>
         <div class="col-lg-12">
           <%= password_field_tag :password_confirmation, '', class: "form-control" %>
         </div>
       </div>
       <div class="form-group">
         <div class="col-lg-12">
-          <input type="submit" name="create_user_submit" value="保存" class="col-xs-12 btn btn-primary">
+          <input type="submit" name="create_user_submit" value="Save" class="col-xs-12 btn btn-primary">
         </div>
       </div>
     <% end -%>
