--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -32,7 +32,7 @@
           <li><a href="<%= new_session_path %>">Login</a></li>
         <% else %>
           <li><a href="#">Welcome <%= current_user.username %></a></li>
-          <li><%= link_to "退出", logout_path, method: :delete %></li>
+          <li><%= link_to "Logout", logout_path, method: :delete %></li>
         <% end -%>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">User Center <span class="caret"></span></a>
