--- a/app/views/payments/failed.html.erb
+++ b/app/views/payments/failed.html.erb
@@ -1,9 +1,9 @@
-<h1>支付结果</h1>
+<h1>Payment Result</h1>
 <div class="row">
   <div class="container">
     <div class="alert alert-warning">
-      <h2><i class="fa fa-info-circle"></i> 支付失败</h2>
+      <h2><i class="fa fa-info-circle"></i> Payment Failed</h2>
     </div>
-    <p>请稍后重试</p>
+    <p>Please try again later</p>
   </div>
 </div>
