--- a/app/views/payments/success.html.erb
+++ b/app/views/payments/success.html.erb
@@ -1,9 +1,9 @@
-<h1>支付结果</h1>
+<h1>Payment Result</h1>
 <div class="row">
   <div class="container">
     <div class="alert alert-success">
-      <h2><i class="fa fa-check-circle"></i> 支付成功</h2>
+      <h2><i class="fa fa-check-circle"></i> Payment Successful</h2>
     </div>
-    <a href="<%= root_path %>">继续购物</a>
+    <a href="<%= root_path %>">Continue Shopping</a>
   </div>
 </div>
