--- a/app/views/shared/_products.html.erb
+++ b/app/views/shared/_products.html.erb
@@ -5,7 +5,7 @@
         <% if product.main_product_image.image.attached? %>
           <%= link_to image_tag(product.main_product_image.image.variant(resize_to_limit: [300, 300]).processed, alt: product.title), product_path(product) %>
         <% else %>
-          <%= link_to image_tag("default_image.jpg", alt: product.title), product_path(product) %>  <!-- 默认图片 -->
+          <%= link_to image_tag("default_image.jpg", alt: product.title), product_path(product) %>
         <% end %>
         <div class="caption">
           <h4><%= link_to product.title, product_path(product), class: 'title' %></h4>
