--- a/app/views/shopping_carts/index.html.erb
+++ b/app/views/shopping_carts/index.html.erb
@@ -1,4 +1,4 @@
-<h1>购物车 (<%= @shopping_carts.count %>)</h1>
+<h1>Cart (<%= @shopping_carts.count %>)</h1>
 <div class="row">
   <div class="container">
     <div class="alert alert-info">
@@ -12,29 +12,29 @@
             </div>
             <div class="media-body">
               <h4 class="media-heading"><%= link_to shopping_cart.product.title, product_path(shopping_cart.product) %></h4>
-              数量: <%= shopping_cart.amount %> 价格: ¥<%= shopping_cart.amount * shopping_cart.product.price %>
+              Quantity: <%= shopping_cart.amount %> Price: ¥<%= shopping_cart.amount * shopping_cart.product.price %>
             </div>
             <div class="media-right">
               <%= form_tag shopping_cart_path(shopping_cart), method: :put do %>
                 <p><input type="text" name="amount" value="<%= shopping_cart.amount %>" /></p>
                 <p>
-                  <%= submit_tag "更新", class: "btn btn-default btn-xs" %>
-                  <%= link_to "删除", shopping_cart_path(shopping_cart), method: :delete, 'data-confirm': "不考虑一下了?", class: "btn btn-default btn-xs" %>
+                  <%= submit_tag "Update", class: "btn btn-default btn-xs" %>
+                  <%= link_to "Delete", shopping_cart_path(shopping_cart), method: :delete, 'data-confirm': "View Shopping Cart", class: "btn btn-default btn-xs" %>
                 </p>
               <% end -%>
             </div>
           </div>
         <% end -%>
       <% else %>
-        <h3>购物车为空</h3>
+        <h3>Your Cart is Empty</h3>
       <% end -%>
     </div>
 
     <% unless @shopping_carts.blank? %>
       <div class="pull-right">
-        <strong>总价: ¥<%= @shopping_carts.sum { |cart| cart.amount * cart.product.price } %></strong>
+        <strong>Total Price: ¥<%= @shopping_carts.sum { |cart| cart.amount * cart.product.price } %></strong>
         &nbsp;
-        <%= link_to "去结算", new_order_path, class: "btn btn-danger btn-lg" %>
+        <%= link_to "Go to Result", new_order_path, class: "btn btn-danger btn-lg" %>
       </div>
       <div class="clearfix"></div>
     <% end %>
