--- a/app/views/addresses/index.html.erb
+++ b/app/views/addresses/index.html.erb
@@ -9,8 +9,8 @@
       <li class="list-group-item">
         <label>
           <input type="radio" name="address_id" value="<%= address.id %>" <%= 'checked' if current_user.default_address == address %> />
-          <%= address.contact_name %>
-          <%= address.address %>
+          <%= address.contact_name %><br>
+          <%= address.address %><br>
           <%= address.cellphone %>
 
           <%= link_to "Edit", edit_address_path(address), remote: true, class: "inline edit-address-btn" %>
