--- a/app/views/addresses/new.html.erb
+++ b/app/views/addresses/new.html.erb
@@ -51,7 +51,7 @@
           <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
               <label>
-                <input type="checkbox" name="address[set_as_default]" <%= 'checked' if current_user.default_address == @address %> value="1" /> Set as Default Shipping Address
+                <input type="checkbox" name="address[set_as_default]" <%= 'checked' if current_user.default_address == @address %> value="1" > Set as Default Shipping Address
               </label>
             </div>
           </div>
