--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>Game Mall</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -20,7 +20,7 @@
 
   <body>
     <%= render 'layouts/menu' %>
-    <div class=container">
+    <div class="container">
 
     <% unless flash[:notice].blank? %>
     <div class="alert alert-info"><%= flash[:notice] %></div>
