--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -25,7 +25,7 @@
       <li>Stock: <%= @product.amount %></li>
     </ul>
     <h3><strong>¥<%= @product.price %></strong> <span class="msrp">¥<%= @product.msrp %></span></h3>
-    <p>Quantity: <input type="text" name="amount" value="1" /></p>
+    <p>Quantity: <input type="text" name="amount" value="1" ></p>
     <p><%= show_add_to_cart @product %></p>
 
     <br />
